Define provisioning strategy.